objects/LH__Lookup_Helper_Filter__c.object
<CustomObject>
    <fields>
        <fullName>LH__Dupe_Lookup_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dupe Record Lookup Test</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lookup Helper Filters</relationshipLabel>
        <relationshipName>Lookup_Helper_Filters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LH__Dupe_Test__c</fullName>
        <formula>&apos; &apos; + &apos;- test&apos;</formula>
        <label>Dupe Record Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Field__c</fullName>
        <label>Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Filter_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter Group</label>
        <referenceTo>LH__Lookup_Helper_Filter_Group__c</referenceTo>
        <relationshipLabel>Lookup Helper Filters</relationshipLabel>
        <relationshipName>Lookup_Helper_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LH__Filter_Number__c</fullName>
        <label>Filter Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH__Logic__c</fullName>
        <label>Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Operator__c</fullName>
        <label>Operator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LH__Required__c</fullName>
        <label>Required</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Test_Formula_Calculated_Filter__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test_Formula_Calculated_Filter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LH__Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Lookup Helper Filter</label>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Lookup Helper Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Helper Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>